# piano_roll_cpp_port

./: AGENTS.md  CMakeLists.txt  PLAN.md  README.md
docs/: PLAN.md
docs/session_handover/: 2025-11-30T000000Z.md  2025-12-01T000000Z-piano-roll-panel-handoff.md
include/piano_roll/: cc_lane.hpp  cc_lane_renderer.hpp  config.hpp  coordinate_system.hpp  custom_scrollbar.hpp  demo.hpp  draggable_rectangle.hpp  grid_snap.hpp  interaction.hpp  keyboard.hpp  loop_marker_rectangle.hpp  note.hpp  note_manager.hpp  overlay.hpp  piano_roll.hpp  playback.hpp  render_config.hpp  renderer.hpp  serialization.hpp  types.hpp  widget.hpp
src/: cc_lane_renderer.cpp  coordinate_system.cpp  custom_scrollbar.cpp  demo.cpp  draggable_rectangle.cpp  grid_snap.cpp  interaction.cpp  keyboard.cpp  loop_marker_rectangle.cpp  note_manager.cpp  overlay.cpp  renderer.cpp  serialization.cpp  widget.cpp
